--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
-<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+<div class="pricing-header px-3 py-3 pt-md-4 pb-md-4 mx-auto text-center">
+  <img src="assets/images/nasa.jpeg" alt="NASA logo" class="logo">
   <h1 class="display-4">Pricing</h1>
   <p class="lead">
     Quickly build an effective pricing table for your potential customers with this Bootstrap example.
