--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,27 +2,27 @@
   <footer class="pt-4 my-md-5 pt-md-5 border-top">
     <div class="row">
       <div class="col-12 col-md">
-        <span>Company</span>
+        <span i18n>Company</span>
         <small class="d-block mb-3 text-muted">© 2017-2018</small>
       </div>
       <div class="col-6 col-md">
-        <h5>Features</h5>
+        <h5 i18n>Features</h5>
         <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="#">Cool stuff</a></li>
-          <li><a class="text-muted" href="#">Random feature</a></li>
-          <li><a class="text-muted" href="#">Team feature</a></li>
-          <li><a class="text-muted" href="#">Stuff for developers</a></li>
-          <li><a class="text-muted" href="#">Another one</a></li>
-          <li><a class="text-muted" href="#">Last time</a></li>
+          <li><a class="text-muted" href="#" i18n>Cool stuff</a></li>
+          <li><a class="text-muted" href="#" i18n>Random feature</a></li>
+          <li><a class="text-muted" href="#" i18n>Team feature</a></li>
+          <li><a class="text-muted" href="#" i18n>Stuff for developers</a></li>
+          <li><a class="text-muted" href="#" i18n>Another one</a></li>
+          <li><a class="text-muted" href="#" i18n>Last time</a></li>
         </ul>
       </div>
       <div class="col-6 col-md">
-        <h5>Resources</h5>
+        <h5 i18n>Resources</h5>
         <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="#">Resource</a></li>
-          <li><a class="text-muted" href="#">Resource name</a></li>
-          <li><a class="text-muted" href="#">Another resource</a></li>
-          <li><a class="text-muted" href="#">Final resource</a></li>
+          <li><a class="text-muted" href="#" i18n>Resource</a></li>
+          <li><a class="text-muted" href="#" i18n>Resource name</a></li>
+          <li><a class="text-muted" href="#" i18n>Another resource</a></li>
+          <li><a class="text-muted" href="#" i18n>Final resource</a></li>
         </ul>
       </div>
       <div class="col-6 col-md">
