--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,10 @@
 <div class="pricing-header px-3 py-3 pt-md-4 pb-md-4 mx-auto text-center">
-  <img src="assets/images/nasa.jpeg" alt="NASA logo" class="logo">
-  <h1 class="display-4">Pricing</h1>
-  <p class="lead">
-    Quickly build an effective pricing table for your potential customers with this Bootstrap example.
-    It’s built with default Bootstrap components and utilities with little customization.
+  <img src="assets/images/nasa.jpeg" alt="NASA logo" i18n-logo class="logo">
+  <h1 class="display-4" i18n="site header|Title for home page">Pricing</h1>
+  <p class="lead" i18n>
+    Quickly build an effective pricing table for your potential
+    customers with this Bootstrap example. It’s built with default
+    Bootstrap components and utilities with little customization.
   </p>
 </div>
 <div class="container">
@@ -14,15 +15,23 @@
       </div>
       <div class="card-body">
         <h1 class="card-title pricing-card-title">
-          {{ tariff.price | currency }} <small class="text-muted">/ mon</small>
+          {{ tariff.price | currency }}
+          <small class="text-muted">/ <ng-content i18n>mon</ng-content></small>
         </h1>
         <ul class="list-unstyled mt-3 mb-4">
-          <li>{{ tariff.users }} users included</li>
-          <li>{{ tariff.storage }} GB of storage</li>
+          <li i18n>
+            {tariff.users, plural,
+              =0 {No users}
+              =1 {{{tariff.users}} user include}
+              other {{{tariff.users}} users included}}
+          </li>
+          <li>{{ tariff.storage }} <ng-content i18n>GB of storage</ng-content></li>
           <li>{{ tariff.support | support }}</li>
-          <li *ngIf="tariff.helpCenter">Help center access</li>
+          <li *ngIf="tariff.helpCenter" i18n>Help center access</li>
         </ul>
-        <button type="button" class="btn btn-lg btn-block btn-outline-primary">{{ tariff.type | tariffButton }}</button>
+        <button type="button" class="btn btn-lg btn-block btn-outline-primary">
+          {{ tariff.type | tariffButton }}
+        </button>
       </div>
     </div>
   </div>
