--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -26,12 +26,12 @@
         </ul>
       </div>
       <div class="col-6 col-md">
-        <h5>About</h5>
+        <h5 i18n>About</h5>
         <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="#">Team</a></li>
-          <li><a class="text-muted" href="#">Locations</a></li>
-          <li><a class="text-muted" href="#">Privacy</a></li>
-          <li><a class="text-muted" href="#">Terms</a></li>
+          <li><a class="text-muted" href="#" i18n>Team</a></li>
+          <li><a class="text-muted" href="#" i18n>Locations</a></li>
+          <li><a class="text-muted" href="#" i18n>Privacy</a></li>
+          <li><a class="text-muted" href="#" i18n>Terms</a></li>
         </ul>
       </div>
     </div>
