--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,8 +12,7 @@
             type="button"
             class="btn btn-primary dropdown-toggle"
             aria-controls="dropdown-basic">
-      <ng-container i18n>Language</ng-container>
-      Language <span class="caret"></span>
+      <ng-container i18n>Language</ng-container> <span class="caret"></span>
     </button>
     <ul id="dropdown-basic"
         *dropdownMenu
