--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="pricing-header px-3 py-3 pt-md-4 pb-md-4 mx-auto text-center">
-  <img src="assets/images/nasa.jpeg" alt="NASA logo" i18n-logo class="logo">
+  <img src="assets/images/nasa.jpeg" alt="NASA logo" i18n-alt class="logo">
   <h1 class="display-4" i18n="site header|Title for home page">Pricing</h1>
   <p class="lead" i18n>
     Quickly build an effective pricing table for your potential
