Add nossr version

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,8 +19,8 @@
         class="dropdown-menu"
         role="menu"
         aria-labelledby="button-basic">
-      <li role="menuitem"><a class="dropdown-item" href="#">English</a></li>
-      <li role="menuitem"><a class="dropdown-item" href="#">Русский</a></li>
+      <li role="menuitem"><a class="dropdown-item" href="/en/">English</a></li>
+      <li role="menuitem"><a class="dropdown-item" href="/ru/">Русский</a></li>
     </ul>
   </div>
   <a class="btn btn-outline-primary" href="#" i18n>Sign up</a>
