Add translation for Footer and Header

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,36 +2,36 @@
   <footer class="pt-4 my-md-5 pt-md-5 border-top">
     <div class="row">
       <div class="col-12 col-md">
-        <span>Company</span>
+        <span>{{ 'FOOTER.Company' | translate }}</span>
         <small class="d-block mb-3 text-muted">© 2017-2018</small>
       </div>
       <div class="col-6 col-md">
-        <h5>Features</h5>
+        <h5>{{ 'FOOTER.FEATURES.title' | translate }}</h5>
         <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="#">Cool stuff</a></li>
-          <li><a class="text-muted" href="#">Random feature</a></li>
-          <li><a class="text-muted" href="#">Team feature</a></li>
-          <li><a class="text-muted" href="#">Stuff for developers</a></li>
-          <li><a class="text-muted" href="#">Another one</a></li>
-          <li><a class="text-muted" href="#">Last time</a></li>
+          <li><a class="text-muted" href="#">{{ 'FOOTER.FEATURES.cool_stuff' | translate }}</a></li>
+          <li><a class="text-muted" href="#">{{ 'FOOTER.FEATURES.random_feature' | translate }}</a></li>
+          <li><a class="text-muted" href="#">{{ 'FOOTER.FEATURES.team_feature' | translate }}</a></li>
+          <li><a class="text-muted" href="#">{{ 'FOOTER.FEATURES.stuff_for_developers' | translate }}</a></li>
+          <li><a class="text-muted" href="#">{{ 'FOOTER.FEATURES.another_one' | translate }}</a></li>
+          <li><a class="text-muted" href="#">{{ 'FOOTER.FEATURES.last_time' | translate }}</a></li>
         </ul>
       </div>
       <div class="col-6 col-md">
-        <h5>Resources</h5>
+        <h5>{{ 'FOOTER.RESOURCES.title' | translate }}</h5>
         <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="#">Resource</a></li>
-          <li><a class="text-muted" href="#">Resource name</a></li>
-          <li><a class="text-muted" href="#">Another resource</a></li>
-          <li><a class="text-muted" href="#">Final resource</a></li>
+          <li><a class="text-muted" href="#">{{ 'FOOTER.RESOURCES.resource' | translate }}</a></li>
+          <li><a class="text-muted" href="#">{{ 'FOOTER.RESOURCES.resource_name' | translate }}</a></li>
+          <li><a class="text-muted" href="#">{{ 'FOOTER.RESOURCES.another_resource' | translate }}</a></li>
+          <li><a class="text-muted" href="#">{{ 'FOOTER.RESOURCES.final_resource' | translate }}</a></li>
         </ul>
       </div>
       <div class="col-6 col-md">
-        <h5>About</h5>
+        <h5>{{ 'FOOTER.ABOUT.title' | translate }}</h5>
         <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="#">Team</a></li>
-          <li><a class="text-muted" href="#">Locations</a></li>
-          <li><a class="text-muted" href="#">Privacy</a></li>
-          <li><a class="text-muted" href="#">Terms</a></li>
+          <li><a class="text-muted" href="#">{{ 'FOOTER.ABOUT.team' | translate }}</a></li>
+          <li><a class="text-muted" href="#">{{ 'FOOTER.ABOUT.locations' | translate }}</a></li>
+          <li><a class="text-muted" href="#">{{ 'FOOTER.ABOUT.privacy' | translate }}</a></li>
+          <li><a class="text-muted" href="#">{{ 'FOOTER.ABOUT.terms' | translate }}</a></li>
         </ul>
       </div>
     </div>
