--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,7 @@
 <div class="pricing-header px-3 py-3 pt-md-4 pb-md-4 mx-auto text-center">
   <img src="assets/images/nasa.jpeg" alt="NASA logo" class="logo">
-  <h1 class="display-4">Pricing</h1>
-  <p class="lead">
-    Quickly build an effective pricing table for your potential customers with this Bootstrap example.
-    It’s built with default Bootstrap components and utilities with little customization.
-  </p>
+  <h1 class="display-4">{{ 'HOME.title' | translate }}</h1>
+  <p class="lead">{{ 'HOME.description' | translate }}</p>
 </div>
 <div class="container">
   <div class="card-deck mb-3 mt-5 text-center">
@@ -14,15 +11,15 @@
       </div>
       <div class="card-body">
         <h1 class="card-title pricing-card-title">
-          {{ tariff.price | currency }} <small class="text-muted">/ mon</small>
+          {{ tariff.price | currency }} <small class="text-muted">/ {{ 'HOME.month' | translate }}</small>
         </h1>
         <ul class="list-unstyled mt-3 mb-4">
           <li>{{ tariff.users }} users included</li>
-          <li>{{ tariff.storage }} GB of storage</li>
-          <li>{{ tariff.support | support }}</li>
-          <li *ngIf="tariff.helpCenter">Help center access</li>
+          <li>{{ tariff.storage }} {{ 'HOME.storage' | translate }}</li>
+          <li>{{ tariff.support | support | async }}</li>
+          <li *ngIf="tariff.helpCenter">{{ 'HOME.help_access' | translate }}</li>
         </ul>
-        <button type="button" class="btn btn-lg btn-block btn-outline-primary">{{ tariff.type | tariffButton }}</button>
+        <button type="button" class="btn btn-lg btn-block btn-outline-primary">{{ tariff.type | tariffButton | async }}</button>
       </div>
     </div>
   </div>
